# shame-table

./: .env  Cargo.toml
docker-compose/: docker-compose.yml
init-cocktail-db/: Cargo.toml  Dockerfile
init-cocktail-db/migrations/: 20250221112626_init.sql
init-cocktail-db/src/: main.rs
init-cocktail-db/src/database/: db.rs
rest-api/: Dockerfile
rest-api/src/: main.rs
rest-api/src/data/: data.rs
rest-api/src/html/: index.html
rest-api/src/html/cocktail_machine/: cocktails.html
rest-api/src/route_handler/: add_entry.rs  cocktails.rs  entries.rs  get_entries.rs  mod.rs  start_page.rs
rest-api/src/router/: mod.rs  rest_api_router.rs
src/: main.rs
src/data/: data.rs
src/html/: index.html  results.html
src/html/cocktail_machine/: cocktails.html
src/route_handler/: add_entry.rs  cocktails.rs  entries.rs  get_entries.rs  mod.rs  start_page.rs
src/router/: rest_api_router.rs
